# pdfeditor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  RENDER_SETUP.md  deploy-cloudrun.sh  render.env.example
src/: error.rs  main.rs
src/models/: request.rs  response.rs
src/pdf/: font.rs  mod.rs  renderer.rs  utils.rs
src/routes/: analyze.rs  apply.rs  download.rs  mod.rs  upload.rs
src/services/: mod.rs  pdf_service.rs
src/storage/: file_store.rs
