[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
pdfium-render = { version = "0.9", features = ["thread_safe"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
lopdf = "0.35"
ttf-parser = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
